--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "prettier": "npx prettier . --write",
+    "lint": "eslint . ",
+    "lint:fix": "eslint . --fix "
   },
   "author": "dhirajAcharya",
   "license": "ISC",
@@ -13,5 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3"
   }
 }
