--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
