--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,14 +11,22 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@tiptap/extension-highlight": "^2.7.2",
+    "@tiptap/extension-text-style": "^2.7.2",
+    "@tiptap/extension-underline": "^2.7.2",
+    "@tiptap/pm": "^2.7.2",
+    "@tiptap/react": "^2.7.2",
+    "@tiptap/starter-kit": "^2.7.2",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "html-react-parser": "^5.1.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
