--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@tiptap/extension-highlight": "^2.7.2",
+    "@tiptap/extension-placeholder": "^2.7.2",
     "@tiptap/extension-text-style": "^2.7.2",
     "@tiptap/extension-underline": "^2.7.2",
     "@tiptap/pm": "^2.7.2",
@@ -40,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.43",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
