--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@tailwindcss/forms": "^0.5.9",
     "@tiptap/extension-highlight": "^2.7.2",
     "@tiptap/extension-placeholder": "^2.7.2",
     "@tiptap/extension-text-style": "^2.7.2",
