few changes in sample env file

--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -3,9 +3,7 @@ NODE_ENV = development
 PORT = 3000
 MONGODB_URI = <YOUR_MONGODB_URI>
 
-
 CORS_ORIGIN = http://localhost:5173
-
 
 ACCESS_TOKEN_SECRET = <YOUR_ACCESS_TOKEN_SECRET>
 ACCESS_TOKEN_EXPIRY = 1d
@@ -13,8 +11,20 @@ ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = <YOUR_REFRESH_TOKEN_SECRET>
 REFRESH_TOKEN_EXPIRY = 10d
 
+# for otp token, 
+OTP_TOKEN_SECRET = <YOUR_OTP_TOKEN_SECRET>
+OTP_TOKEN_EXPIRY = 30m
+
+# for forgot password token
+RESET_PWD_TOKEN_SECRET = <YOUR_RESET_PWD_TOKEN_SECRET>
+RESET_PWD_TOKEN_EXPIRY = 30m
 
 # Environment Varibles for sending emails using Nodemailer and Gmail
 EMAIL_SMTP_PORT = 587 # 587 is recommended port but incase of some error set to 456 
 SENDER_EMAIL_ADDRESS = <YOUR_GMAIL_ADDRESS>
 EMAIL_SECURE_PASSWORD = <YOUR_GMAIL_APP_PASSWORD>
+
+# Environment Variables for uploading images in cloudinary
+CLOUDINARY_CLOUD_NAME = <YOUR_CLOUDINARY_CLOUD_NAME>
+CLOUDINARY_API_KEY = <YOUR_CLOUDINARY_API_KEY>
+CLOUDINARY_API_SECRET = <YOUR_CLOUDINARY_API_SECRET>
